Fix padding for all headings on mobile.

--- a/src/containers/Hero/Hero.scss
+++ b/src/containers/Hero/Hero.scss
@@ -135,8 +135,8 @@
         }
         
         @media screen and (min-width: 568px) and (orientation: landscape) {
-            font-size: 1.0em;
-            padding: 5px 30px;
+            font-size: 0.9em;
+            padding: 5px 40px;
         }
         
         // Medium devices (tablets, 640px and up)
