--- a/src/containers/Projects/Projects.scss
+++ b/src/containers/Projects/Projects.scss
@@ -6,8 +6,8 @@
         padding: 0 40px 30px;
         margin-top: 30px;
 
-        @media screen and (max-width : 500px) {
-            padding: 0 40px;
+        @media screen and (max-width: 500px) {
+            padding: 0 20px;
             margin-top: 10px;
         }
     }
